V2.3/数据库文档/数据库设计文档.md
# 2.1版本数据库设计文档

# 1.1 约定  
* MySQL 5.7+
* 驼峰命名法  
* utf8字符集，utf8_general_ci字符序  
* innoDB引擎
  

# 1.2 概述

ipproxy数据库
> proxy表：用来保存代理ip信息 

job数据库  
> jobInfo表：用来保存爬取并且经过清洗的职位信息

user数据库  

> user表：用来保存用户和管理员的信息

# 1.3 详细

## proxy
|ipAddress|ipPort|ipType|IpSpeed|
|---|---|----|----|---|
|ip地址|ip端口|网络协议|代理延迟|
约束条件：ipAddress主键  
DDL：

```
CREATE TABLE `proxypool` (
  `IPAddress` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `IPPort` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL,
  `IPType` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL,
  `IPSpeed` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL,
  PRIMARY KEY (`IPAddress`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8
```

## jobInfo

|id|jobName|company|address|salary|date|exp|edu|offerNumber|jobInfo|companyType|staffNumber|companyOrientation|jobURl|unifyName|
|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|
|序号|职位名|公司名|公司地址|薪水（万/月）|发布日期yyyy-MM-DD|经验要求|学历要求|招收人数|职位描述|公司类型|公司规模|公司发展方向|职位网址|统一名|

约束条件：id 自增主键，（jobName，company，date）多重唯一键  

DDL
```
CREATE TABLE `jobinfo` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `jobName` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `company` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `address` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `salary` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `date` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `exp` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `edu` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `offerNumber` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `jobInfo` longtext CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `companyType` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `staffNumber` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `companyOrientation` varchar(250) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `jobURL` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci NOT NULL,
  `unifyName` varchar(255) CHARACTER SET utf8 COLLATE utf8_general_ci DEFAULT NULL,
  PRIMARY KEY (`id`),
  UNIQUE KEY `jobName_company_date_uniq` (`jobName`,`company`,`date`)
) ENGINE=InnoDB AUTO_INCREMENT=118994 DEFAULT CHARSET=utf8
```

## user

| username | password | name     | sex  | age  | email | phone    | address  | workingYear | salaryWanted    | blog     | edu      | glory    | exp      | description | professionalSkill | personalSkill | toolSkill    |
| -------- | -------- | -------- | ---- | ---- | ----- | -------- | -------- | ----------- | --------------- | -------- | -------- | -------- | -------- | ----------- | ----------------- | ------------- | ------------ |
| 用户名   | 密码     | 真实姓名 | 性别 | 年龄 | 邮箱  | 手机号码 | 工作地址 | 工作年龄    | 期望薪资(万/月) | 博客地址 | 教育水平 | 个人荣耀 | 工作经验 | 个人经历    | 专业技能          | 个人技能      | 工具使用技能 |

约束条件：username 主键

该表继承Django默认的User类,因此会多出一些除了上述以外的django自带的字段

DDL

```sql
CREATE TABLE `user` (
  `last_login` datetime(6) DEFAULT NULL,
  `is_superuser` tinyint(1) NOT NULL,
  `first_name` varchar(30) NOT NULL,
  `last_name` varchar(150) NOT NULL,
  `is_staff` tinyint(1) NOT NULL,
  `is_active` tinyint(1) NOT NULL,
  `date_joined` datetime(6) NOT NULL,
  `username` varchar(16) NOT NULL,
  `password` varchar(128) NOT NULL,
  `name` varchar(32) NOT NULL,
  `sex` varchar(32) NOT NULL,
  `age` int(11) DEFAULT NULL,
  `email` varchar(254) DEFAULT NULL,
  `phone` bigint(20) DEFAULT NULL,
  `address` varchar(128) NOT NULL,
  `workingYear` varchar(32) NOT NULL,
  `salaryWanted` double DEFAULT NULL,
  `blog` varchar(200) DEFAULT NULL,
  `edu` varchar(16) NOT NULL,
  `glory` longtext NOT NULL,
  `exp` longtext NOT NULL,
  `description` longtext NOT NULL,
  `professioanlSkill` varchar(256) NOT NULL,
  `personalSkill` varchar(256) NOT NULL,
  `toolSkill` varchar(256) NOT NULL,
  PRIMARY KEY (`username`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8
```



